explore first learning goal

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 166,
    "id": "e1805ee6",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,7 +26,6 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "from spacy_conll import init_parser\n",
-    "import spacy\n",
     "load_dotenv()"
    ]
   },
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 167,
    "id": "25595557",
    "metadata": {},
    "outputs": [],
@@ -54,17 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 168,
    "id": "38a8c910",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Die Männerrunde am Brunnen   \\n Herr Jakob steht am Brunnen und beobachtet, wie die andere Männer ihre kleine Schiffe zu Wasser lassen. Er geht und holt Materialien für sein Schiff. Er bastelt sein Schiff. Herr Jakob läßt das Schiff zu Wasser.'"
+       "'Die Männerrunde am Brunnen   \\n Herr Jakob steht am Brunnen und beobachtet, wie die andere Männer ihre kleine Schiffe zu Wasser lassen. Er geht und holt Materialien für sein Schiff. Er bastelt\\nsein Schiff. Herr Jakob läßt das Schiff zu Wasser.'"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 169,
    "id": "56dd2258",
    "metadata": {},
    "outputs": [
@@ -123,13 +122,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-19 16:13:31 INFO: Checking for updates to resources.json in case models have been updated.  Note: this behavior can be turned off with download_method=None or download_method=DownloadMethod.REUSE_RESOURCES\n"
+      "2025-08-19 16:57:34 INFO: Checking for updates to resources.json in case models have been updated.  Note: this behavior can be turned off with download_method=None or download_method=DownloadMethod.REUSE_RESOURCES\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0edd00f45014f3abd3e8c756141097a",
+       "model_id": "4dc99968665242a6b6d3b0b59c0cb02a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,8 +143,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-19 16:13:31 INFO: Downloaded file to /home/jstet/stanza_resources/resources.json\n",
-      "2025-08-19 16:13:32 INFO: Loading these models for language: de (German):\n",
+      "2025-08-19 16:57:34 INFO: Downloaded file to /home/jstet/stanza_resources/resources.json\n",
+      "2025-08-19 16:57:35 INFO: Loading these models for language: de (German):\n",
       "=================================\n",
       "| Processor | Package           |\n",
       "---------------------------------\n",
@@ -156,13 +155,13 @@
       "| depparse  | combined_charlm   |\n",
       "=================================\n",
       "\n",
-      "2025-08-19 16:13:32 INFO: Using device: cpu\n",
-      "2025-08-19 16:13:32 INFO: Loading: tokenize\n",
-      "2025-08-19 16:13:32 INFO: Loading: mwt\n",
-      "2025-08-19 16:13:32 INFO: Loading: pos\n",
-      "2025-08-19 16:13:33 INFO: Loading: lemma\n",
-      "2025-08-19 16:13:39 INFO: Loading: depparse\n",
-      "2025-08-19 16:13:39 INFO: Done loading processors!\n"
+      "2025-08-19 16:57:35 INFO: Using device: cpu\n",
+      "2025-08-19 16:57:35 INFO: Loading: tokenize\n",
+      "2025-08-19 16:57:35 INFO: Loading: mwt\n",
+      "2025-08-19 16:57:35 INFO: Loading: pos\n",
+      "2025-08-19 16:57:36 INFO: Loading: lemma\n",
+      "2025-08-19 16:57:41 INFO: Loading: depparse\n",
+      "2025-08-19 16:57:41 INFO: Done loading processors!\n"
      ]
     }
    ],
@@ -175,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 170,
    "id": "da39e6c1",
    "metadata": {},
    "outputs": [],
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 171,
    "id": "f474c51e",
    "metadata": {},
    "outputs": [
@@ -239,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 172,
    "id": "f0329f07",
    "metadata": {},
    "outputs": [
@@ -279,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 173,
    "id": "2ca27611",
    "metadata": {},
    "outputs": [
@@ -316,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 174,
    "id": "f5e5742c",
    "metadata": {},
    "outputs": [
@@ -343,11 +342,11 @@
     }
    ],
    "source": [
-    "nlp = init_parser(\"de_core_news_lg\",\n",
+    "snlp = init_parser(\"de_core_news_lg\",\n",
     "                  \"spacy\",\n",
     "                  include_headers=True)\n",
     "\n",
-    "doc = nlp(\"Er baute es auf. Er hat es aufgebaut\")\n",
+    "doc = snlp(\"Er baute es auf. Er hat es aufgebaut\")\n",
     "\n",
     "conll = doc._.conll_str\n",
     "print(conll)"
@@ -363,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "id": "914513b6",
    "metadata": {},
    "outputs": [
@@ -397,7 +396,7 @@
        "  }])"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "id": "01015096",
    "metadata": {},
    "outputs": [
@@ -452,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "id": "ad8f314d",
    "metadata": {},
    "outputs": [],
@@ -485,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "id": "8c2c053a",
    "metadata": {},
    "outputs": [
@@ -518,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "id": "aa3eaf19",
    "metadata": {},
    "outputs": [
@@ -552,13 +551,65 @@
        "  }])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "count_verb(temp_doc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8393c57",
+   "metadata": {},
+   "source": [
+    "### Learning goals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9373e0cc",
+   "metadata": {},
+   "source": [
+    "#### 1: Setence in present tense"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "67d35651",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hit:  läuft\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "example = \"Der Hund läuft. Der Hund ist gelaufen. Der Hund lief. Der Hund wird laufen.\"\n",
+    "doc = nlp(example)\n",
+    "def is_präsens(doc):\n",
+    "    count = 0\n",
+    "    for s in doc.sentences:\n",
+    "        for w in s.words:\n",
+    "            if w.upos == \"VERB\":\n",
+    "                feats = w.feats.split(\"|\")\n",
+    "                if len(feats) >= 3:\n",
+    "                    tense = feats[3]\n",
+    "                    if \"Tense\" in tense:\n",
+    "                        if \"Pres\" in tense:\n",
+    "                            print(\"Hit: \", w.text)\n",
+    "                            count += 1\n",
+    "    return count\n",
+    "\n",
+    "count = is_präsens(doc)\n",
+    "print(count)"
    ]
   }
  ],
