add pipeline draft, remove .html from gitignore

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 1,
    "id": "e1805ee6",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,6 +26,8 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "from spacy_conll import init_parser\n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
+    "from tqdm import tqdm\n",
     "load_dotenv()"
    ]
   },
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 2,
    "id": "25595557",
    "metadata": {},
    "outputs": [],
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 3,
    "id": "38a8c910",
    "metadata": {},
    "outputs": [
@@ -63,7 +65,7 @@
        "'Die Männerrunde am Brunnen   \\n Herr Jakob steht am Brunnen und beobachtet, wie die andere Männer ihre kleine Schiffe zu Wasser lassen. Er geht und holt Materialien für sein Schiff. Er bastelt\\nsein Schiff. Herr Jakob läßt das Schiff zu Wasser.'"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 4,
    "id": "56dd2258",
    "metadata": {},
    "outputs": [
@@ -122,13 +124,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-19 16:57:34 INFO: Checking for updates to resources.json in case models have been updated.  Note: this behavior can be turned off with download_method=None or download_method=DownloadMethod.REUSE_RESOURCES\n"
+      "2025-08-19 17:12:37 INFO: Checking for updates to resources.json in case models have been updated.  Note: this behavior can be turned off with download_method=None or download_method=DownloadMethod.REUSE_RESOURCES\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dc99968665242a6b6d3b0b59c0cb02a",
+       "model_id": "0aca365b0522464bbbe66f2c6d3d8c0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,8 +145,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-19 16:57:34 INFO: Downloaded file to /home/jstet/stanza_resources/resources.json\n",
-      "2025-08-19 16:57:35 INFO: Loading these models for language: de (German):\n",
+      "2025-08-19 17:12:37 INFO: Downloaded file to /home/jstet/stanza_resources/resources.json\n",
+      "2025-08-19 17:12:38 INFO: Loading these models for language: de (German):\n",
       "=================================\n",
       "| Processor | Package           |\n",
       "---------------------------------\n",
@@ -155,13 +157,13 @@
       "| depparse  | combined_charlm   |\n",
       "=================================\n",
       "\n",
-      "2025-08-19 16:57:35 INFO: Using device: cpu\n",
-      "2025-08-19 16:57:35 INFO: Loading: tokenize\n",
-      "2025-08-19 16:57:35 INFO: Loading: mwt\n",
-      "2025-08-19 16:57:35 INFO: Loading: pos\n",
-      "2025-08-19 16:57:36 INFO: Loading: lemma\n",
-      "2025-08-19 16:57:41 INFO: Loading: depparse\n",
-      "2025-08-19 16:57:41 INFO: Done loading processors!\n"
+      "2025-08-19 17:12:38 INFO: Using device: cpu\n",
+      "2025-08-19 17:12:38 INFO: Loading: tokenize\n",
+      "2025-08-19 17:12:38 INFO: Loading: mwt\n",
+      "2025-08-19 17:12:38 INFO: Loading: pos\n",
+      "2025-08-19 17:12:39 INFO: Loading: lemma\n",
+      "2025-08-19 17:12:44 INFO: Loading: depparse\n",
+      "2025-08-19 17:12:45 INFO: Done loading processors!\n"
      ]
     }
    ],
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 5,
    "id": "da39e6c1",
    "metadata": {},
    "outputs": [],
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 6,
    "id": "f474c51e",
    "metadata": {},
    "outputs": [
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 7,
    "id": "f0329f07",
    "metadata": {},
    "outputs": [
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 8,
    "id": "2ca27611",
    "metadata": {},
    "outputs": [
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 9,
    "id": "f5e5742c",
    "metadata": {},
    "outputs": [
@@ -362,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 10,
    "id": "914513b6",
    "metadata": {},
    "outputs": [
@@ -396,7 +398,7 @@
        "  }])"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 11,
    "id": "01015096",
    "metadata": {},
    "outputs": [
@@ -451,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 12,
    "id": "ad8f314d",
    "metadata": {},
    "outputs": [],
@@ -484,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 13,
    "id": "8c2c053a",
    "metadata": {},
    "outputs": [
@@ -517,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 14,
    "id": "aa3eaf19",
    "metadata": {},
    "outputs": [
@@ -551,7 +553,7 @@
        "  }])"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 15,
    "id": "67d35651",
    "metadata": {},
    "outputs": [
@@ -610,6 +612,83 @@
     "\n",
     "count = is_präsens(doc)\n",
     "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3357e8c7",
+   "metadata": {},
+   "source": [
+    "## Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4162cbc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing verb counts for t1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing verb counts:   0%|          | 0/17 [05:57<?, ?it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pipeline(text: str) -> int:\n",
+    " corrected = \" \".join(opt(text=text).corrected)\n",
+    " temp = nlp(corrected)\n",
+    " count, _ = count_verb(temp)\n",
+    " return count\n",
+    "\n",
+    "def compute_counts(texts: list[str]) -> list[int]:\n",
+    "    with ProcessPoolExecutor(max_workers=12) as executor:\n",
+    "        return list(tqdm(executor.map(pipeline, texts), total=len(texts), desc=\"Computing verb counts\"))\n",
+    "\n",
+    "t1_texts = df[\"t1\"].to_list()\n",
+    "t2_texts = df[\"t2\"].to_list()\n",
+    "\n",
+    "print(\"Computing verb counts for t1...\")\n",
+    "verb_counts_t1 = compute_counts(t1_texts)\n",
+    "\n",
+    "print(\"Computing verb counts for t2...\")\n",
+    "verb_counts_t2 = compute_counts(t2_texts)\n",
+    "\n",
+    "df = df.with_columns([\n",
+    " pl.Series(\"verb_count_t1\", verb_counts_t1),\n",
+    " pl.Series(\"verb_count_t2\", verb_counts_t2),\n",
+    "]).with_columns((pl.col(\"verb_count_t1\") - pl.col(\"verb_count_t2\"))\n",
+    " .alias(\"verb_count_diff\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cd1c7ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.6470588235294117"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"verb_count_diff\"].mean()"
    ]
   }
  ],
